add image, right column (very unfinished)
This is still a work in progress. I just thought I should commit
regularly :)

--- a/test.html
+++ b/test.html
@@ -86,6 +86,9 @@
     <h1>Plant Database</h1>
 	<br/>
 	
+	<div class="row">
+	
+	<div class="col-xs-8">
 
 
 	<table class="table table-bordered">
@@ -116,20 +119,20 @@
 				<td>preissii</td>
 				<td>Rottnest cypress</td>				
 			</tr>
-			<tr>
-				<td><span class="label" style="background-color: lime">fern</span></td>
+			<tr class="tr-fern">
+				<td>fern</td>
 				<td>Asplenium</td>
 				<td>australiasicum</td>
 				<td>Bird's nest fern</td>				
 			</tr>
-			<tr>
-				<td><span class="label" style="background-color: lime">fern</span></td>
+			<tr class="tr-fern">
+				<td>fern</td>
 				<td>Cyathea</td>
 				<td>cooperi</td>
 				<td>Lacy tree fern</td>				
 			</tr>
-			<tr>
-				<td><span class="label" style="background-color: green">grass</span></td>
+			<tr class="tr-grass">
+				<td>grass</td>
 				<td>Cynodon</td>
 				<td>dactylon</td>
 				<td>Couch</td>				
@@ -138,10 +141,25 @@
 	
 	</table>
 
+	</div>
+	
+	<div class="col-xs-4">
+		<div class="well">
+			<h2>Old Man's Beard</h2>
+			<img src="images/plants/old_mans_beard.jpg" alt="Old Man's Beard" width="100%" class="img-rounded"/>
+			<hr/>
+			<h4>Quick Info:</h4>
+			<p>The seed borne on the female plants are the typical fluffy seed-heads characteristic of many Clematis species.</p>
+		</div>
+	</div>
+
+	</div class="row">
 
 	<br/>
 	
 	<hr/>
+	
+	
 	
 	<footer>
 	
