--- a/test.html
+++ b/test.html
@@ -90,56 +90,68 @@
 	
 	<div class="col-xs-8">
 
-
-	<table class="table table-bordered">
-		<thead>
-			<tr>
-				<th width="10%">Type</th>
-				<th>Family Name</th>
-				<th>Botanical Name</th>
-				<th>Common Name</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class="tr-climber">
-				<td>climber</td>
-				<td>Bougainvillea</td>
-				<td>glabra</td>
-				<td>Testing</td>				
-			</tr>		
-			<tr class="tr-climber">
-				<td>climber</td>
-				<td>Clematis</td>
-				<td>microphylla</td>
-				<td>Old man's beard</td>				
-			</tr>
-			<tr class="tr-conifer">
-				<td>conifer</td>
-				<td>Callitris</td>
-				<td>preissii</td>
-				<td>Rottnest cypress</td>				
-			</tr>
-			<tr class="tr-fern">
-				<td>fern</td>
-				<td>Asplenium</td>
-				<td>australiasicum</td>
-				<td>Bird's nest fern</td>				
-			</tr>
-			<tr class="tr-fern">
-				<td>fern</td>
-				<td>Cyathea</td>
-				<td>cooperi</td>
-				<td>Lacy tree fern</td>				
-			</tr>
-			<tr class="tr-grass">
-				<td>grass</td>
-				<td>Cynodon</td>
-				<td>dactylon</td>
-				<td>Couch</td>				
-			</tr>
-		</tbody>	
 	
-	</table>
+
+	<div style="margin-right: 17px; margin-bottom: -22px;">
+		<table class="table table-bordered">
+			<thead>
+				<tr>
+					<th width="10%">Type</th>
+					<th width="30%">Family Name</th>
+					<th width="30%">Botanical Name</th>
+					<th width="30%">Common Name</th>
+				</tr>
+			</thead>
+			
+		</table>
+	</div>
+	<div class="scrollbar-area" style="height: 600px">
+	
+		<table class="table table-bordered">
+
+			<tbody>
+				<tr class="tr-climber">
+					<td width="10%">climber</td>
+					<td width="30%">Bougainvillea</td>
+					<td width="30%">glabra</td>
+					<td width="30%">Testing</td>				
+				</tr>		
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Clematis</td>
+					<td>microphylla</td>
+					<td>Old man's beard</td>				
+				</tr>
+				<tr class="tr-conifer">
+					<td>conifer</td>
+					<td>Callitris</td>
+					<td>preissii</td>
+					<td>Rottnest cypress</td>				
+				</tr>
+				<tr class="tr-fern">
+					<td>fern</td>
+					<td>Asplenium</td>
+					<td>australiasicum</td>
+					<td>Bird's nest fern</td>				
+				</tr>
+				<tr class="tr-fern">
+					<td>fern</td>
+					<td>Cyathea</td>
+					<td>cooperi</td>
+					<td>Lacy tree fern</td>				
+				</tr>
+				<tr class="tr-grass">
+					<td>grass</td>
+					<td>Cynodon</td>
+					<td>dactylon</td>
+					<td>Couch</td>				
+				</tr>
+			</tbody>	
+		
+		</table>
+
+	</div>
+
 
 	</div>
 	
