--- a/test.html
+++ b/test.html
@@ -12,8 +12,16 @@
 	<!-- Custom CSS -->
 	<link href="css/custom.css" rel="stylesheet">
 
+	<!-- Scrollbar -->
+	<link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" />
 
+	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
+	
+	<!-- Sortable tables -->
+	<!-- DOESN'T WORK AT THE MOMENT :'(
+	<script src="js/sorttable_3.js"></script>
+	-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,10 +31,12 @@
     <![endif]-->
   </head>
   <body>
+
   
-  <div class="container">
+
   
   <nav class="navbar navbar-inverse" role="navigation">
+    <div class="container">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,51 +46,30 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="#" style="margin-top: -10px; margin-left: -25px"><img src="images/uwacrest.gif" width="150px" alt="UWA Logo"/></a>
+      <a class="navbar-brand" href="#">WA Plants Database</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="#">Sign Up</a></li>
+		<li><a href="#">Login</a></li>
+        <li><a href="#">Site Map</a></li>
+		<li><a href="#">Contact</a></li>
+		<form class="navbar-form navbar-left" role="search">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Search">
+			</div>
+			<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+		</form>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+  </div>
 </nav>
   
-  
+    <div class="container">
   
   
     <h1>Plant Database</h1>
@@ -88,12 +77,13 @@
 	
 	<div class="row">
 	
-	<div class="col-xs-8">
+	<div class="col-md-8">
 
 	
+	<div style="min-width: 600px">
 
-	<div style="margin-right: 17px; margin-bottom: -22px;">
-		<table class="table table-bordered">
+	<div style="margin-right: 20px; margin-bottom: -22px;">
+		<table class="table table-bordered sortable" id="sortable-header">
 			<thead>
 				<tr>
 					<th width="10%">Type</th>
@@ -102,12 +92,11 @@
 					<th width="30%">Common Name</th>
 				</tr>
 			</thead>
-			
 		</table>
 	</div>
-	<div class="scrollbar-area" style="height: 600px">
+	<div id="scrollbox" style="height: 60vh; min-height: 482px">
 	
-		<table class="table table-bordered">
+		<table class="table table-bordered" style="margin-bottom: -2px;" id="sortable-body">
 
 			<tbody>
 				<tr class="tr-climber">
@@ -115,12 +104,66 @@
 					<td width="30%">Bougainvillea</td>
 					<td width="30%">glabra</td>
 					<td width="30%">Testing</td>				
-				</tr>		
+				</tr>
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Bougainvillea</td>
+					<td>glabra</td>
+					<td>Testing</td>				
+				</tr>
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Bougainvillea</td>
+					<td>glabra</td>
+					<td>Testing</td>				
+				</tr>	
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Bougainvillea</td>
+					<td>glabra</td>
+					<td>Testing</td>				
+				</tr>	
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Bougainvillea</td>
+					<td>glabra</td>
+					<td>Testing</td>				
+				</tr>				
 				<tr class="tr-climber">
 					<td>climber</td>
 					<td>Clematis</td>
 					<td>microphylla</td>
 					<td>Old man's beard</td>				
+				</tr>
+				<tr class="tr-climber">
+					<td>climber</td>
+					<td>Clematis</td>
+					<td>microphylla</td>
+					<td>Old man's beard</td>				
+				</tr>
+				<tr class="tr-conifer">
+					<td>conifer</td>
+					<td>Callitris</td>
+					<td>preissii</td>
+					<td>Rottnest cypress</td>				
+				</tr>
+				<tr class="tr-conifer">
+					<td>conifer</td>
+					<td>Callitris</td>
+					<td>preissii</td>
+					<td>Rottnest cypress</td>				
+				</tr>
+				<tr class="tr-conifer">
+					<td>conifer</td>
+					<td>Callitris</td>
+					<td>preissii</td>
+					<td>Rottnest cypress</td>				
+				</tr>
+				<tr class="tr-conifer">
+					<td>conifer</td>
+					<td>Callitris</td>
+					<td>preissii</td>
+					<td>Rottnest cypress</td>				
 				</tr>
 				<tr class="tr-conifer">
 					<td>conifer</td>
@@ -140,6 +183,36 @@
 					<td>cooperi</td>
 					<td>Lacy tree fern</td>				
 				</tr>
+				<tr class="tr-fern">
+					<td>fern</td>
+					<td>Cyathea</td>
+					<td>cooperi</td>
+					<td>Lacy tree fern</td>				
+				</tr>
+				<tr class="tr-fern">
+					<td>fern</td>
+					<td>Cyathea</td>
+					<td>cooperi</td>
+					<td>Lacy tree fern</td>				
+				</tr>
+				<tr class="tr-fern">
+					<td>fern</td>
+					<td>Cyathea</td>
+					<td>cooperi</td>
+					<td>Lacy tree fern</td>				
+				</tr>
+				<tr class="tr-grass">
+					<td>grass</td>
+					<td>Cynodon</td>
+					<td>dactylon</td>
+					<td>Couch</td>				
+				</tr>
+				<tr class="tr-grass">
+					<td>grass</td>
+					<td>Cynodon</td>
+					<td>dactylon</td>
+					<td>Couch</td>				
+				</tr>
 				<tr class="tr-grass">
 					<td>grass</td>
 					<td>Cynodon</td>
@@ -152,16 +225,21 @@
 
 	</div>
 
+	</div>
 
 	</div>
 	
-	<div class="col-xs-4">
+	<div class="col-md-4">
 		<div class="well">
 			<h2>Old Man's Beard</h2>
 			<img src="images/plants/old_mans_beard.jpg" alt="Old Man's Beard" width="100%" class="img-rounded"/>
 			<hr/>
 			<h4>Quick Info:</h4>
 			<p>The seed borne on the female plants are the typical fluffy seed-heads characteristic of many Clematis species.</p>
+			<hr/>
+			<button type="button" class="btn btn-success btn-lg">
+			  More Details&nbsp;&nbsp;<span class="glyphicon glyphicon-list-alt"></span>
+			</button>
 		</div>
 	</div>
 
@@ -171,18 +249,37 @@
 	
 	<hr/>
 	
+	</div>
 	
+	<br/>
 	
 	<footer>
-	
-	(C) Group K. This is a very basic prototype!
+	<div class="container">
+		<p>
+			<span style="float: left">Copyright (C) Group K, University of Western Australia, 2014</span>
+			<span style="float: right"><a href="#">Sign Up</a> | <a href="#">Login</a> | <a href="#">Site Map</a> | <a href="#">Contact</a></span>
+		</p>
+	</div>
 	</footer>
 
-	</div>
+
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+	
+	<!-- Scrollbar -->
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>	
+	<script>
+		(function($){
+			$(window).load(function(){
+				$("#scrollbox").mCustomScrollbar();
+			});
+		})(jQuery);
+	</script>	
+	
+	
   </body>
 </html>
