--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#" style="margin-top: -10px; margin-left: -25px"><img src="images/uwacrest.gif" width="150px" alt="UWA Logo"/></a>
-      <a class="navbar-brand" href="#">WA Plants Database</a>
+      <a class="navbar-brand" href="http://www.uwa.edu.au" style="margin-top: -10px; margin-left: -25px" target="_blank"><img src="images/uwacrest.gif" width="150px" alt="UWA Logo"/></a>
+      <a class="navbar-brand" href="index.html">WA Plants Database</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +77,7 @@
 	
 	<div class="row">
 	
-	<div class="col-md-8">
+	<div class="col-md-9">
 
 	
 	<div style="min-width: 600px">
@@ -229,21 +229,21 @@
 
 	</div>
 	
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<div class="well">
-			<h2>Old Man's Beard</h2>
-			<img src="images/plants/old_mans_beard.jpg" alt="Old Man's Beard" width="100%" class="img-rounded"/>
+			<h2>Rose (Rosacae)</h2>
+			<img src="images/plants/rose_1.jpg" alt="Rose" width="100%" class="img-rounded"/>
 			<hr/>
 			<h4>Quick Info:</h4>
-			<p>The seed borne on the female plants are the typical fluffy seed-heads characteristic of many Clematis species.</p>
+			<p>A rose is a woody perennial of the genus Rosa, within the family Rosaceae. There are over 100 species and thousands of cultivars.</p>
 			<hr/>
-			<button type="button" class="btn btn-success btn-lg">
+			<button type="button" class="btn btn-success btn-lg" onclick="window.location.href='detail.html'">
 			  More Details&nbsp;&nbsp;<span class="glyphicon glyphicon-list-alt"></span>
 			</button>
 		</div>
 	</div>
 
-	</div class="row">
+	</div>
 
 	<br/>
 	
