stop weird resizing, mostly
it still doesn't resize the navbar properly. bootstrap is annoying

--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <title>Plant Database Template - Detail View</title>
 
     <!-- Bootstrap -->
@@ -32,10 +32,9 @@
 
   
 
-  
   <nav class="navbar navbar-inverse" role="navigation">
     <div class="container">
-  <div class="container-fluid">
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -63,22 +62,22 @@
 		</form>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
   </div>
 </nav>
+
   
     <div class="container">
   
-  
-	<ol class="breadcrumb">
-	  <li><a href="index.html">Home</a></li>
-	  <li class="active">Rosa (Rosacae)</li>
-	</ol>
+
+
+	
+	
   
 	
 	<div class="row">
 	
-	<div class="col-md-4">
+	<div class="col-xs-4">
     <h1>Rose (Rosacae)</h1>
 	<br/>
 
@@ -131,7 +130,7 @@
 	</div>
 
 	
-	<div class="col-md-4">
+	<div class="col-xs-4">
 		<h2 style="margin-bottom: 37px">Description</h2>
 		<hr/>
 		<p>A rose is a woody perennial of the genus Rosa, within the family Rosaceae. There are over 100 species and thousands of cultivars. They form a group of plants that can be erect shrubs, climbing or trailing with stems that are often armed with sharp prickles. Flowers vary in size and shape and are usually large and showy, in colours ranging from white through yellows and reds. </p><p>Most species are native to Asia, with smaller numbers native to Europe, North America, and northwest Africa. Species, cultivars and hybrids are all widely grown for their beauty and often are fragrant. Rose plants range in size from compact, miniature roses, to climbers that can reach seven meters in height. Different species hybridize easily, and this has been used in the development of the wide range of garden roses</p>
@@ -144,7 +143,7 @@
 
 	</div>
 	
-	<div class="col-md-4">
+	<div class="col-xs-4">
 		<h2 style="margin-bottom: 37px">Photos</h2>
 		<hr/>
 		
