--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   
   <nav class="navbar navbar-inverse" role="navigation">
     <div class="container">
-  <div class="container-fluid">
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -65,7 +65,7 @@
 		</form>
       </ul>
     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+
   </div>
 </nav>
   
@@ -77,7 +77,7 @@
 	
 	<div class="row">
 	
-	<div class="col-md-9">
+	<div class="col-xs-9">
 
 	
 	<div style="min-width: 600px">
@@ -229,7 +229,7 @@
 
 	</div>
 	
-	<div class="col-md-3">
+	<div class="col-xs-3">
 		<div class="well">
 			<h2>Rose (Rosacae)</h2>
 			<img src="images/plants/rose_1.jpg" alt="Rose" width="100%" class="img-rounded"/>
