--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	
 	<div class="row">
 	
-	<div class="col-xs-9">
+	<div class="col-xs-8">
 
 	
 	<div style="min-width: 600px">
@@ -94,7 +94,7 @@
 			</thead>
 		</table>
 	</div>
-	<div id="scrollbox" style="height: 60vh; min-height: 482px">
+	<div id="scrollbox" style="height: 548px">
 	
 		<table class="table table-bordered" style="margin-bottom: -2px;" id="sortable-body">
 
@@ -229,7 +229,7 @@
 
 	</div>
 	
-	<div class="col-xs-3">
+	<div class="col-xs-4">
 		<div class="well">
 			<h2>Rose (Rosacae)</h2>
 			<img src="images/plants/rose_1.jpg" alt="Rose" width="100%" class="img-rounded"/>
@@ -245,9 +245,8 @@
 
 	</div>
 
-	<br/>
 	
-	<hr/>
+
 	
 	</div>
 	
