--- a/detail.html
+++ b/detail.html
@@ -11,6 +11,7 @@
 	
 	<!-- Custom CSS -->
 	<link href="css/custom.css" rel="stylesheet">
+	<link href="css/custom-desktop.css" rel="stylesheet">
 	<link href="css/slideshow.css" rel="stylesheet">
 
 	<!-- Google Fonts -->
