--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	
 	<!-- Custom CSS -->
 	<link href="css/custom.css" rel="stylesheet">
+	<link href="css/custom-desktop.css" rel="stylesheet">
 
 	<!-- Scrollbar -->
 	<link href="css/jquery.mCustomScrollbar.css" rel="stylesheet" />
@@ -250,7 +251,7 @@
 	
 	</div>
 	
-	<br/>
+	<br/><br/><br/><br/><br/>
 	
 	<footer>
 	<div class="container">
