improve scrolling (unfinished)
The scrolling was pretty annoying on phones, so I made an attempt to fix
it. It's still not great, and needs more work.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
+		
 	
 	<!-- Sortable tables -->
 	<!-- DOESN'T WORK AT THE MOMENT :'(
@@ -87,10 +88,10 @@
 		<table class="table table-bordered sortable" id="sortable-header">
 			<thead>
 				<tr>
-					<th width="10%">Type</th>
+					<th width="11%">Type</th>
 					<th width="30%">Family Name</th>
 					<th width="30%">Botanical Name</th>
-					<th width="30%">Common Name</th>
+					<th width="29%">Common Name</th>
 				</tr>
 			</thead>
 		</table>
@@ -101,10 +102,10 @@
 
 			<tbody>
 				<tr class="tr-climber">
-					<td width="10%">climber</td>
+					<td width="11%">climber</td>
 					<td width="30%">Bougainvillea</td>
 					<td width="30%">glabra</td>
-					<td width="30%">Testing</td>				
+					<td width="29%">Testing</td>				
 				</tr>
 				<tr class="tr-climber">
 					<td>climber</td>
@@ -265,7 +266,7 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
 	
