--- a/index-mobile.html
+++ b/index-mobile.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no;">
     <title>Plant Database Template</title>
 
     <!-- Bootstrap -->
@@ -16,11 +16,7 @@
 	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat|Oxygen|Noto+Sans|Nunito' rel='stylesheet' type='text/css'>
 	
-	<!-- Sortable tables -->
-	<!-- DOESN'T WORK AT THE MOMENT :'(
-	<script src="js/sorttable_3.js"></script>
-	-->
-
+	
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -29,10 +25,6 @@
     <![endif]-->
   </head>
   <body>
-
-  
-
-  
 	<nav class="navbar navbar-inverse" role="navigation">
 	  <div class="container-fluid">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -61,16 +53,24 @@
 		</div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
-  
-	<table class="table table-bordered sortable">
-		<thead>
+
+
+	
+	<table class="table table-bordered" style="margin-top: -20px;">
+			<thead>
 			<tr>
-				<th width="10%" class="sorttable_nosort"></th>
-				<th width="60%">Common Name</th>
-				<th width="20%">Type</th>
+				<th width="10%"></th>
+				<th width="57.5%">Common Name</th>
+				<th width="22.5%">Type</th>
 				<th width="10%"></th>
 			</tr>
 		</thead>
+	</table>
+	
+	<div id="scrollbox" style="height: 50%; overflow-y: scroll; margin-bottom: 0px; margin-top: -22px;">
+	
+	<table class="table table-bordered" style="margin-bottom: 0px;">
+
 		<tbody>
 			<tr class="tr-climber">
 				<td width="10%" style="padding: 3px"><img src="images/plants/rose_1.jpg" alt="Rose" class="img-circle"></img></td>
@@ -194,27 +194,56 @@
 			</tr>
 		</tbody>	
 	</table>
+	</div>
 
+	<div style="height: 60px"></div>
 
-	<br/>
+	<div id="bottom-nav-mobile">
+		<div class="bottom-nav-box" style="float: left; border-right: 1px solid gray;" id="bottom-nav-1">
+			<p><span class="glyphicon glyphicon-chevron-up"></span>&nbsp;First</p>
+		
+		</div>
+		<div class="bottom-nav-box" style="float: left; border-left: 1px solid #242424; border-right: 1px solid gray;" id="bottom-nav-2">
+			<p><span class="glyphicon glyphicon-chevron-down"></span>&nbsp;Last</p>
+		</div>
+		<div class="bottom-nav-box" style="float: left; border-left: 1px solid #242424" id="bottom-nav-3">
+			<p><span class="glyphicon glyphicon-tree-deciduous"></span>&nbsp;Genus</p>
+		</div>
 	
-	<footer>
-		<p>
-			<p>Copyright (C) Group K, University of Western Australia, 2014</p>
-			<p><a href="#">Sign Up</a> | <a href="#">Login</a> | <a href="#">Site Map</a> | <a href="#">Contact</a></p>
-		</p>
-	</footer>
+	</div>
 
-
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+
+	<script src="js/jquery.mobile.custom.min.js"></script>		
 	
 	<!-- Sortable tables -->
 	<script src="js/sorttable.js"></script>	
 	
+	<!-- Mobile buttons -->
+	<!--<script src="js/mobile_buttons.js"></script>-->
+	
+	<script>
+	
+		// Button that scrolls to top of page
+		$('#bottom-nav-1').bind('tap', function () {
+			$('html, body').animate({scrollTop : 0},500);
+			return false;
+		});
+
+
+		// Button that scrolls to bottom of page
+		$('#bottom-nav-2').bind('tap', function () {
+			$('html, body').animate({scrollTop : $(document).height()-$(window).height()},500);
+			return false;
+		});
+	
+	</script>
+	
+
+	
+
 	
   </body>
 </html>
