--- a/index-mobile.html
+++ b/index-mobile.html
@@ -63,8 +63,8 @@
 			<thead>
 			<tr style="background: white">
 				<th width="10%"></th>
-				<th width="57.5%">Common Name</th>
-				<th width="22.5%">Type</th>
+				<th width="60%">Common Name</th>
+				<th width="20%">Type</th>
 				<th width="10%"></th>
 			</tr>
 		</thead>
@@ -222,7 +222,8 @@
 	</div>
 	
 	</div>
-
+	
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
