add detail page

--- a/index-mobile.html
+++ b/index-mobile.html
@@ -59,8 +59,8 @@
 	  </div><!-- /.container-fluid -->
 	  
 	  
-	  	<table class="table table-bordered" style="margin-bottom: -1px" >
-			<thead>
+	<table class="table table-bordered" style="margin-bottom: -1px" >
+		<thead>
 			<tr style="background: white">
 				<th width="10%"></th>
 				<th width="60%">Common Name</th>
@@ -75,127 +75,127 @@
 	
 	
 
+	<div style="height: 88px"></div>
 	
 	
-	
-	<table class="table table-bordered" style="margin-top: 88px; margin-bottom: 0px;">
+	<table class="table table-bordered" style="margin-bottom: 0px;">
 
 		<tbody>
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td width="10%" style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td width="60%">Testing</td>
 				<td width="20%">Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
 			</tr>
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>
 				<td>Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern"  class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
 			</tr>	
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>			
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>
 			</tr>	
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>				
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Old man's beard</td>
 				<td>Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
 			</tr>
-			<tr class="tr-climber">
+			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern" class="img-circle"></img></td>
 				<td>Old man's beard</td>
 				<td>Climber</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
 			</tr>
-			<tr class="tr-conifer">
+			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>
 				<td>Conifer</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
 			</tr>
-			<tr class="tr-conifer">
+			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>
 				<td>Conifer</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-conifer">
+			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern"  class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
 			</tr>
-			<tr class="tr-conifer">
+			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-conifer">
+			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-fern">
+			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Bird's nest fern</td>	
 				<td>Fern</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
 			</tr>
-			<tr class="tr-fern">
+			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-fern">
+			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-fern">
+			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
 			</tr>
-			<tr class="tr-fern">
+			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
 			</tr>
-			<tr class="tr-grass">
+			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Couch</td>		
 				<td>Grass</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
 			</tr>
-			<tr class="tr-grass">
+			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Couch</td>	
 				<td>Grass</td>	
 				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
 			</tr>
-			<tr class="tr-grass">
+			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Couch</td>		
 				<td>Grass</td>	
@@ -233,25 +233,9 @@
 	<!-- Sortable tables -->
 	<script src="js/sorttable.js"></script>	
 	
+	
 	<!-- Mobile buttons -->
-	<!--<script src="js/mobile_buttons.js"></script>-->
-	
-	<script>
-	
-		// Button that scrolls to top of page
-		$('#bottom-nav-1').bind('tap', function () {
-			$('#scrollbox').animate({scrollTop : 0},500);
-			return false;
-		});
-
-
-		// Button that scrolls to bottom of page
-		$('#bottom-nav-2').bind('tap', function () {
-			$('#scrollbox').animate({scrollTop : 520},500);
-			return false;
-		});
-	
-	</script>
+	<script src="js/mobile_buttons.js"></script>
 	
 
 	
