--- a/index-mobile.html
+++ b/index-mobile.html
@@ -81,125 +81,125 @@
 	<table class="table table-bordered" style="margin-bottom: 0px;">
 
 		<tbody>
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td width="10%" style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td width="60%">Testing</td>
 				<td width="20%">Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
+				<td width="10%"><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>				
 			</tr>
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>
 				<td>Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern"  class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>	
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>			
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>
 			</tr>	
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Testing</td>	
 				<td>Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>				
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Old man's beard</td>
 				<td>Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>				
 			</tr>
-			<tr class="tr-climber" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-climber">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern" class="img-circle"></img></td>
 				<td>Old man's beard</td>
 				<td>Climber</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>				
 			</tr>
-			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-conifer">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>
 				<td>Conifer</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>
-			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-conifer">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>
 				<td>Conifer</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>
-			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-conifer">
 				<td style="padding: 3px"><img src="images/plants/birds_nest_fern_small.jpg" alt="Fern"  class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-conifer">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-conifer" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-conifer">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Rottnest cypress</td>	
 				<td>Conifer</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>
-			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-fern">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Bird's nest fern</td>	
 				<td>Fern</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-fern">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-fern">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-fern">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>			
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>			
 			</tr>
-			<tr class="tr-fern" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-fern">
 				<td style="padding: 3px"><img src="images/plants/rose_2_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Lacy tree fern</td>	
 				<td>Fern</td>
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>				
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>				
 			</tr>
-			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-grass">
 				<td style="padding: 3px"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Couch</td>		
 				<td>Grass</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>		
 			</tr>
-			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-grass">
 				<td style="padding: 3px"><img src="images/plants/old_mans_beard_small.jpg" alt="Beard" class="img-circle"></img></td>
 				<td>Couch</td>	
 				<td>Grass</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>		
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>	
 			</tr>
-			<tr class="tr-grass" onclick="window.location.href='detail-mobile.html'">
+			<tr class="tr-grass">
 				<td style="padding: 3px"><img src="images/plants/rose_3_small.jpg" alt="Rose" class="img-circle"></img></td>
 				<td>Couch</td>		
 				<td>Grass</td>	
-				<td width="10%"><span class="glyphicon glyphicon-chevron-right"></span></td>	
+				<td><a href= "detail-mobile.html"><span class="glyphicon glyphicon-chevron-right"></span></a></td>	
 			</tr>
 		</tbody>	
 	</table>
