--- a/detail-mobile.html
+++ b/detail-mobile.html
@@ -66,7 +66,7 @@
 			<tr style="background: white">
 				<th width="40%" style="border-right: 1px solid gray" onclick="window.location.href='index-mobile.html'"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;WA Plants List</th>
 		
-				<th width="25%" style="padding: 5px"><span style="float: right; margin-right: 10px;"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img>&nbsp;Photos</span></th>
+				<th width="25%" style="padding: 5px" onclick="window.location.href='photos-mobile.html'"><span style="float: right; margin-right: 10px;"><img src="images/plants/rose_1_small.jpg" alt="Rose" class="img-circle"></img>&nbsp;Photos</span></th>
 			</tr>
 		</thead>
 	</table>
